// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description should render with full props 1`] = `
<div
  className="nice-panel character-view__description info"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Description
  </div>
  <div
    className="nice-panel-content"
  >
    <div
      className="base-link-group nice-btn-group pull-right"
    >
      <a
        className="cursor-pointer nice-btn icon fa-pencil"
        href={undefined}
        onClick={[Function]}
      >
        Edit
      </a>
      <a
        className="cursor-pointer nice-btn icon fa-clone"
        onClick={[Function]}
      >
        Copy
      </a>
      <a
        className="cursor-pointer nice-btn icon fa-trash-o bad"
        onClick={[Function]}
      >
        Delete
      </a>
    </div>
    <h3>
      FooBar McFooBarface
    </h3>
    <h4>
      <div
        className="character inline"
      >
        <div
          className="character-label"
        >
          <span
            className="character-label__item"
          >
            Level 
            1
          </span>
          <div
            className="list-label inline"
          >
            Male
          </div>
          <span
            className="character-label__item"
          >
            Human
          </span>
          <span
            className="character-label__item"
          >
            Bard
          </span>
          <div
            className="list-label inline character-label__alignment"
          >
            True neutral
          </div>
        </div>
      </div>
    </h4>
    <div
      className="character inline"
    >
      <div
        className="nice-progress good"
      >
        <div
          className="nice-progress-fill"
          style={
            Object {
              "height": "1.25rem",
              "width": "100%",
            }
          }
        >
          Level 1 (undefined / undefined)
        </div>
      </div>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;

exports[`Description should render without props 1`] = `
<div
  className="nice-panel character-view__description info"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Description
  </div>
  <div
    className="nice-panel-content"
  >
    <h3>
      Unknown
    </h3>
    <h4>
      <div
        className="character inline"
      >
        <div
          className="character-label"
        >
          <span
            className="character-label__item"
          >
            Level 
          </span>
          <span
            className="character-label__item"
          />
          <span
            className="character-label__item"
          />
        </div>
      </div>
    </h4>
    <div
      className="character inline"
    >
      <div
        className="nice-progress good"
      >
        <div
          className="nice-progress-fill"
          style={
            Object {
              "height": "1.25rem",
              "width": "100%",
            }
          }
        >
          Level undefined (undefined / undefined)
        </div>
      </div>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;
